@@ -4,7 +4,6 @@ from os.path import join
 AVATARS_DIR = join(settings.MEDIA_ROOT, 'avatars')
 DEFAULT_AVATAR = 'generic.jpg'
 DEFAULT_AVATAR_WIDTH = 96
-WEBSEARCH = True
-GEOIP_PATH = ""
+AVATAR_WEBSEARCH = True
 GOOGLE_MAPS_API_KEY = "ABQIAAAA06IJoYHDPFMx4u3hTtaghxTpH3CbXHjuCVmaTc5MkkU4wO1RRhST5bKY_U7dUG1ZGu1S-n-ukXGNjQ"
 
