@@ -16,6 +16,7 @@
 
 {% block content %}
 	<form action="{{ request.path_info }}" method="post" enctype="multipart/form-data">
+	{{ form.errors }}
 	<fieldset>
 		<legend>{% trans "Define your location" %}</legend>
 		<label for="id_country">{% trans "Country" %}<img class="hide" src="{{ MEDIA_URL }}images/loading.gif" /></label>
